# trusted-devices

./: .gitignore  LICENSE  README.md  db.sqlite3-shm  db.sqlite3-wal  deployment_requirements.md  main.py  package-lock.json  pyproject.toml  requirements.txt  technical_requirements.md  wrangler.toml
veridevice/: main.py
veridevice/api/: admin.py  devices.py  evaluations.py  webhooks.py
veridevice/core/: config.py
veridevice/models/: pydantic_models.py  tortoise_models.py
veridevice/tests/: test_api.py
veridevice_web/: manage.py
veridevice_web/dashboard/: urls.py  views.py
veridevice_web/dashboard/templates/dashboard/: audit_logs.html  device_list.html  register_device.html
veridevice_web/veridevice_web/: asgi.py  settings.py  urls.py  wsgi.py
